--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   mongo_dart: ^0.10.0
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
